# clickhouse-mergetree

./: CMakeLists.txt  README.md  demo  demo_final
data/test_flush/part_1/: primary.idx
data/test_flush/part_2/: primary.idx
data/test_flush/part_3/: primary.idx
data/test_merge/part_10/: primary.idx
data/test_merge/part_12/: primary.idx
data/test_merge/part_2/: primary.idx
data/test_merge/part_3/: primary.idx
data/test_merge/part_4/: primary.idx
data/test_merge/part_5/: primary.idx
data/test_merge/part_6/: primary.idx
data/test_merge/part_7/: primary.idx
data/test_performance/part_12/: primary.idx
data/test_performance/part_13/: primary.idx
data/test_performance/part_15/: primary.idx
data/test_performance/part_16/: primary.idx
data/test_performance/part_17/: primary.idx
data/test_performance/part_19/: primary.idx
data/test_performance/part_21/: primary.idx
data/test_performance/part_22/: primary.idx
data/test_performance/part_23/: primary.idx
data/test_performance/part_24/: primary.idx
data/test_performance/part_30/: primary.idx
data/test_performance/part_31/: primary.idx
data/test_performance/part_32/: primary.idx
data/test_performance/part_33/: primary.idx
data/test_performance/part_34/: primary.idx
data/test_performance/part_35/: primary.idx
data/test_performance/part_37/: primary.idx
examples/: demo.cpp
src/: granule.cpp  granule.h  memtable.cpp  memtable.h  merge_tree.cpp  merge_tree.h  merger.cpp  merger.h  part.cpp  part.h  row.h  serialization.cpp  serialization.h  sparse_index.cpp  sparse_index.h
(+7 files in other folders)
